syntax = "proto3";

package backend.v1;

service HealthcheckService {
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  string name = 1;
}

message PingResponse {
  string message = 1;
}
